[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/shortcut_menu/setting_menu/setting_menu.gd" type="Script" id=1]

[node name="SettingMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0488281
anchor_top = 0.0833333
anchor_right = 0.951172
anchor_bottom = 1.08333
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProjectName" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 924.0
offset_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/ProjectName"]
offset_top = 5.0
offset_right = 670.0
offset_bottom = 19.0
size_flags_horizontal = 3
text = "project name"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ProjectName"]
offset_left = 674.0
offset_right = 924.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 250, 0 )

[node name="ProjectLocation" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 44.0
offset_right = 924.0
offset_bottom = 68.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/ProjectLocation"]
offset_top = 5.0
offset_right = 576.0
offset_bottom = 19.0
size_flags_horizontal = 3
text = "project location"

[node name="Button" type="Button" parent="VBoxContainer/ProjectLocation"]
offset_left = 596.0
offset_right = 654.0
offset_bottom = 24.0
text = "browse"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ProjectLocation"]
offset_left = 674.0
offset_right = 924.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 250, 0 )

[node name="ProjectVersion" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 88.0
offset_right = 924.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="VBoxContainer/ProjectVersion"]
offset_top = 5.0
offset_right = 670.0
offset_bottom = 19.0
size_flags_horizontal = 3
text = "project version"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ProjectVersion"]
offset_left = 674.0
offset_right = 924.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 250, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -20.0
offset_right = 59.0
pivot_offset = Vector2( -454, -204 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HBoxContainer"]
offset_right = 41.0
offset_bottom = 20.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="HBoxContainer"]
offset_left = 61.0
offset_right = 102.0
offset_bottom = 20.0
text = "save"

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_Save_pressed"]
